# Spectroo

./: .gitignore  README.md  config.toml  config.toml.bak  main.py  pyproject.toml  requirements.txt  test_t10_gpio.py  test_t11_concurrency.py  test_t7_diag.py  test_t7_exposure_framestack.py  test_t7a_exposure_fixed.py  test_t7a_fixed2.py  test_t8_dark_drift.py  test_t9_flatfield.py
docs/: ARCHITECTURE_DETAILED.md  CHANGELOG.md
scripts/: boot_detect.sh  setup_hotspot.sh
scripts/systemd/: spectroo-boot-detect.service  spectroo-desktop.service  spectroo-web.service  spectroo.service
spectroo/: __init__.py
spectroo/camera/: __init__.py  source.py  startup_calibration.py
spectroo/core/: __init__.py  calibration.py  config.py  exceptions.py  grating_model.py  models.py
spectroo/dsp/: __init__.py  collapse.py  corrections.py  filters.py  peaks.py  pipeline.py
spectroo/storage/: __init__.py  db.py  export.py
spectroo/system/: __init__.py  boot_detect.py  shutdown.py  temp.py
spectroo/ui/: __init__.py  control_panel.py  history_panel.py  main_window.py  plot_widget.py  status_bar.py  theme.py  workers.py
spectroo/ui/dev/: __init__.py  calibration_window.py  (+2 more)
spectroo/web/: __init__.py  app.py  routes.py  routes_dev.py  ws.py
spectroo_v3.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_calibration.py  test_camera.py  test_dev_calibration.py  test_dsp.py  test_flat_field.py  test_history_panel.py  test_main_window.py  test_plot_widget.py  test_startup_calibration.py  test_storage.py  test_system.py  test_ui_widgets.py  test_web.py
(+4 files in other folders)
