[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spectroo_v3"
version = "3.0.0"
description = "Spectroo v3 spectrometer application"
requires-python = ">=3.11"
dependencies = [
    "picamera2>=0.1.0; sys_platform == 'linux'",
    "PyQt5>=5.15.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "websockets>=11.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["spectroo*"]

